[gd_scene load_steps=7 format=3 uid="uid://bglvj405a8scx"]

[ext_resource type="Theme" uid="uid://cboyxbggkvdoj" path="res://7 GUI/Menus/Menu.tres" id="1_talt2"]
[ext_resource type="Script" uid="uid://f8mlw7kacjfj" path="res://7 GUI/Menus/settings.gd" id="2_supjv"]
[ext_resource type="PackedScene" uid="uid://cyol5v5lpw78x" path="res://7 GUI/Menus/setting_slider.tscn" id="3_gs1v7"]
[ext_resource type="Texture2D" uid="uid://d321ejt6bigvh" path="res://8 Assets/Palettes/curiosities-8x.png" id="3_h00h5"]
[ext_resource type="WwiseEvent" uid="uid://bpc3mfvfm1yrq" path="res://Wwise/resources/Event/{1D0D8EA8-D697-496F-AEEA-239402382028}.tres" id="4_p0ldj"]
[ext_resource type="Texture2D" uid="uid://b5rv4mmsvj7w7" path="res://8 Assets/Palettes/slso8-8x.png" id="4_sblu0"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_talt2")
script = ExtResource("2_supjv")
palettes = [ExtResource("3_h00h5"), ExtResource("4_sblu0")]

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.5
offset_top = -320.0
offset_right = 300.5
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="Menu" type="PanelContainer" parent="GridContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/Menu"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Audio" type="Button" parent="GridContainer/Menu/HBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="Graphics" type="Button" parent="GridContainer/Menu/HBoxContainer"]
layout_mode = 2
text = "Graphics"

[node name="Keybinds" type="Button" parent="GridContainer/Menu/HBoxContainer"]
layout_mode = 2
text = "Keybinds"

[node name="User" type="Button" parent="GridContainer/Menu/HBoxContainer"]
layout_mode = 2
text = "User"

[node name="Audio" type="PanelContainer" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(0, 388)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="GridContainer/Audio"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/Audio/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="GridContainer/Audio/CenterContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="AudioSettings" type="Label" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Audio Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Master Text" type="CenterContainer" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Master Text"]
layout_mode = 2
columns = 2

[node name="AudioMaster" type="Label" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Master Text/GridContainer"]
layout_mode = 2
text = "Master: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterEdit" type="LineEdit" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Master Text/GridContainer"]
layout_mode = 2
placeholder_text = "100"
alignment = 1
max_length = 3
context_menu_enabled = false
shortcut_keys_enabled = false
flat = true
select_all_on_focus = true

[node name="SettingSlider2" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer" instance=ExtResource("3_gs1v7")]
layout_mode = 2
is_audio = true
bus_index = 736504446

[node name="HSeparator2" type="HSeparator" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Music Text" type="CenterContainer" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Music Text"]
layout_mode = 2
columns = 2

[node name="AudioMusic" type="Label" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Music Text/GridContainer"]
layout_mode = 2
text = "Music: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicEdit" type="LineEdit" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Music Text/GridContainer"]
layout_mode = 2
placeholder_text = "100"
alignment = 1
max_length = 3
context_menu_enabled = false
shortcut_keys_enabled = false
flat = true
select_all_on_focus = true

[node name="SettingSlider3" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer" instance=ExtResource("3_gs1v7")]
layout_mode = 2
is_audio = true
bus_index = 3325673733

[node name="HSeparator3" type="HSeparator" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SFX Text" type="CenterContainer" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SFX Text"]
layout_mode = 2
columns = 2

[node name="AudioSFX" type="Label" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SFX Text/GridContainer"]
layout_mode = 2
text = "SFX: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXEdit" type="LineEdit" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SFX Text/GridContainer"]
layout_mode = 2
placeholder_text = "100"
alignment = 1
max_length = 3
context_menu_enabled = false
shortcut_keys_enabled = false
flat = true
select_all_on_focus = true

[node name="SettingSlider4" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer" instance=ExtResource("3_gs1v7")]
layout_mode = 2
is_audio = true
bus_index = 3432874653

[node name="HSeparator4" type="HSeparator" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Foot Text" type="CenterContainer" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Foot Text"]
layout_mode = 2
columns = 2

[node name="AudioFoot" type="Label" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Foot Text/GridContainer"]
layout_mode = 2
text = "Footsteps: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="FootEdit" type="LineEdit" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Foot Text/GridContainer"]
layout_mode = 2
placeholder_text = "100"
alignment = 1
max_length = 3
context_menu_enabled = false
shortcut_keys_enabled = false
flat = true
select_all_on_focus = true

[node name="SettingSlider5" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer" instance=ExtResource("3_gs1v7")]
layout_mode = 2
is_audio = true
bus_index = 2782620904

[node name="HSeparator5" type="HSeparator" parent="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Graphics" type="PanelContainer" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(0, 388)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="GridContainer/Graphics"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/Graphics/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="GridContainer/Graphics/CenterContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer"]
layout_mode = 2

[node name="Title" type="MarginContainer" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Title"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Title/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Graphic Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Title/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="ResolutionText" type="Label" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Resolution : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResolutionSelect" type="CenterContainer" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="resoDrop" type="OptionButton" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/ResolutionSelect"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
allow_reselect = true

[node name="HSeparator" type="HSeparator" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="fullscreenText" type="Label" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Fullscreen : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullscreenButton" type="CenterContainer" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="FullscreenCheck" type="CheckButton" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/FullscreenButton"]
unique_name_in_owner = true
layout_mode = 2
icon_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="PrimaryScreenText" type="Label" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Primary Display : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrimarySelect" type="CenterContainer" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="PrimaryDrop" type="OptionButton" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/PrimarySelect"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
allow_reselect = true

[node name="HSeparator5" type="HSeparator" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="HSeparator6" type="HSeparator" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="PaletteLabel" type="Label" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Palette : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="PaletteSelc" type="CenterContainer" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="palette_button" type="OptionButton" parent="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/PaletteSelc"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/icon = ExtResource("3_h00h5")
popup/item_0/id = 0
popup/item_1/icon = ExtResource("4_sblu0")
popup/item_1/id = 1

[node name="Keybinds" type="PanelContainer" parent="GridContainer"]
custom_minimum_size = Vector2(0, 388)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/Keybinds"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/Keybinds/VBoxContainer"]
layout_mode = 2
text = "currently Unable to Rebind



"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Movement" type="Label" parent="GridContainer/Keybinds/VBoxContainer"]
layout_mode = 2
text = "Movement : W A S D"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shoot" type="Label" parent="GridContainer/Keybinds/VBoxContainer"]
layout_mode = 2
text = "Shoot : Mouse 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Chamber" type="Label" parent="GridContainer/Keybinds/VBoxContainer"]
layout_mode = 2
text = "Chamber Bullet : Mouse 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="grenade" type="Label" parent="GridContainer/Keybinds/VBoxContainer"]
layout_mode = 2
text = "Throw Reveal Grenade : F"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fps" type="Label" parent="GridContainer/Keybinds/VBoxContainer"]
layout_mode = 2
text = "FPS counter : F1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="User" type="PanelContainer" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(0, 388)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="GridContainer/User"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/User/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="GridContainer" type="GridContainer" parent="GridContainer/User/CenterContainer/MarginContainer"]
layout_mode = 2
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/User/CenterContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="UserSettings" type="Label" parent="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "User Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Username" type="Label" parent="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_name" type="LineEdit" parent="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "Enter Name"
alignment = 1
max_length = 15

[node name="HSeparator2" type="HSeparator" parent="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="GridContainer" type="GridContainer" parent="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="MouseSens" type="Label" parent="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Mouse Sensitivity "
horizontal_alignment = 1
vertical_alignment = 1

[node name="sensText" type="LineEdit" parent="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "100"
alignment = 1
max_length = 3
context_menu_enabled = false
shortcut_keys_enabled = false
flat = true
select_all_on_focus = true

[node name="SettingSlider" parent="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer" instance=ExtResource("3_gs1v7")]
layout_mode = 2
step = 0.01
value = 0.0
settingsVar = "sensitivity"
maxV = 10

[node name="HSeparator3" type="HSeparator" parent="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackButton" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = -300.5
offset_top = 204.0
offset_right = 300.5
offset_bottom = 320.0
grow_horizontal = 2

[node name="Settings_Back_Button" type="Button" parent="BackButton"]
layout_mode = 2
text = "Back"

[node name="MenuAudio" type="AkEvent2D" parent="."]
event = ExtResource("4_p0ldj")

[connection signal="mouse_entered" from="GridContainer/Menu/HBoxContainer/Audio" to="." method="mouse_hover"]
[connection signal="pressed" from="GridContainer/Menu/HBoxContainer/Audio" to="." method="_audio_pressed"]
[connection signal="mouse_entered" from="GridContainer/Menu/HBoxContainer/Graphics" to="." method="mouse_hover"]
[connection signal="pressed" from="GridContainer/Menu/HBoxContainer/Graphics" to="." method="_graphics_pressed"]
[connection signal="mouse_entered" from="GridContainer/Menu/HBoxContainer/Keybinds" to="." method="mouse_hover"]
[connection signal="pressed" from="GridContainer/Menu/HBoxContainer/Keybinds" to="." method="_keybinds_pressed"]
[connection signal="mouse_entered" from="GridContainer/Menu/HBoxContainer/User" to="." method="mouse_hover"]
[connection signal="pressed" from="GridContainer/Menu/HBoxContainer/User" to="." method="_user_pressed"]
[connection signal="focus_entered" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Master Text/GridContainer/MasterEdit" to="." method="_on_edit_focus_entered"]
[connection signal="focus_exited" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Master Text/GridContainer/MasterEdit" to="." method="_on_edit_focus_exited"]
[connection signal="text_submitted" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Master Text/GridContainer/MasterEdit" to="." method="_on_edit_text_submitted"]
[connection signal="changed" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SettingSlider2" to="." method="mouse_click"]
[connection signal="mouse_entered" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SettingSlider2" to="." method="mouse_hover"]
[connection signal="focus_entered" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Music Text/GridContainer/MusicEdit" to="." method="_on_edit_focus_entered"]
[connection signal="focus_exited" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Music Text/GridContainer/MusicEdit" to="." method="_on_edit_focus_exited"]
[connection signal="text_submitted" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Music Text/GridContainer/MusicEdit" to="." method="_on_edit_text_submitted"]
[connection signal="changed" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SettingSlider3" to="." method="mouse_click"]
[connection signal="mouse_entered" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SettingSlider3" to="." method="mouse_hover"]
[connection signal="focus_entered" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SFX Text/GridContainer/SFXEdit" to="." method="_on_edit_focus_entered"]
[connection signal="focus_exited" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SFX Text/GridContainer/SFXEdit" to="." method="_on_edit_focus_exited"]
[connection signal="text_submitted" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SFX Text/GridContainer/SFXEdit" to="." method="_on_edit_text_submitted"]
[connection signal="changed" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SettingSlider4" to="." method="mouse_click"]
[connection signal="mouse_entered" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SettingSlider4" to="." method="mouse_hover"]
[connection signal="focus_entered" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Foot Text/GridContainer/FootEdit" to="." method="_on_edit_focus_entered"]
[connection signal="focus_exited" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Foot Text/GridContainer/FootEdit" to="." method="_on_edit_focus_exited"]
[connection signal="text_submitted" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/Foot Text/GridContainer/FootEdit" to="." method="_on_edit_text_submitted"]
[connection signal="changed" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SettingSlider5" to="." method="mouse_click"]
[connection signal="mouse_entered" from="GridContainer/Audio/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SettingSlider5" to="." method="mouse_hover"]
[connection signal="item_selected" from="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/ResolutionSelect/resoDrop" to="." method="_change_resolution"]
[connection signal="mouse_entered" from="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/ResolutionSelect/resoDrop" to="." method="mouse_hover"]
[connection signal="pressed" from="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/ResolutionSelect/resoDrop" to="." method="mouse_click"]
[connection signal="mouse_entered" from="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/FullscreenButton/FullscreenCheck" to="." method="mouse_hover"]
[connection signal="toggled" from="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/FullscreenButton/FullscreenCheck" to="." method="_on_fullscreen_check_toggled"]
[connection signal="item_selected" from="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/PrimarySelect/PrimaryDrop" to="." method="_change_screen"]
[connection signal="mouse_entered" from="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/PrimarySelect/PrimaryDrop" to="." method="mouse_hover"]
[connection signal="pressed" from="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/PrimarySelect/PrimaryDrop" to="." method="mouse_click"]
[connection signal="item_selected" from="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/PaletteSelc/palette_button" to="." method="_on_palette_button_item_selected"]
[connection signal="mouse_entered" from="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/PaletteSelc/palette_button" to="." method="mouse_hover"]
[connection signal="pressed" from="GridContainer/Graphics/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/PaletteSelc/palette_button" to="." method="mouse_click"]
[connection signal="focus_entered" from="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer/player_name" to="." method="_on_player_name_focus_entered"]
[connection signal="focus_exited" from="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer/player_name" to="." method="_on_player_name_focus_exited"]
[connection signal="mouse_entered" from="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer/player_name" to="." method="mouse_hover"]
[connection signal="text_changed" from="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer/player_name" to="." method="_on_player_name_text_changed"]
[connection signal="text_submitted" from="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer/player_name" to="." method="_on_player_name_text_submitted"]
[connection signal="focus_entered" from="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/sensText" to="." method="_on_edit_focus_entered"]
[connection signal="focus_exited" from="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/sensText" to="." method="_on_edit_focus_exited"]
[connection signal="text_submitted" from="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer/GridContainer/sensText" to="." method="_on_edit_text_submitted"]
[connection signal="changed" from="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SettingSlider" to="." method="mouse_click"]
[connection signal="mouse_entered" from="GridContainer/User/CenterContainer/MarginContainer/GridContainer/VBoxContainer/SettingSlider" to="." method="mouse_hover"]
